добавляет изображения для карточек товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,8 +43,18 @@
         <ul class="catalog__list">
           <li class="catalog__item product-card">
             <a class="product-card__img-link" href="#">
-              <img class="product-card__img" src="#" width="#" height="172"
-                alt="Оранжевая банка корма «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
+              <picture>
+                <!-- <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken500-tab@1x.webp 1x,
+                img/catalog/chicken500-tab@2x.webp 2x" width="161" height="172">
+                <source type="image/webp" srcset="img/catalog/chicken500-mob@1x.webp 1x,
+                img/catalog/chicken500-mob@2x.webp 2x" width="68" height="86"> -->
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/chicken500-tab@1x.png 1x, img/catalog/chicken500-tab@2x.png 2x" width="161"
+                  height="172">
+                <img class="product-card__image product-card__image--small" src="img/catalog/chicken500-mob@1x.png"
+                  srcset="img/catalog/chicken500-mob@2x.png 2x" width="68" height="86"
+                  alt="Корм «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
+              </picture>
             </a>
             <div class="product-card__wrapper-content">
               <a class="product-card__link" href="#">
@@ -69,8 +79,23 @@
           </li>
           <li class="catalog__item product-card product-card--size-xl">
             <a class="product-card__img-link" href="#">
-              <img class="product-card__image" src="img/catalog-6-desktop.png" width="#" height="200"
-                alt="Оранжевая банка корма «CAT ENERGY PRO» со вкусом курицы 1000 грамм.">
+              <picture>
+                <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/chicken1000-desk@1x.webp 1x,
+                img/catalog/chicken1000-desk@2x.webp 2x" width="172" height="196">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/chicken1000-tab@1x.webp 1x,
+                img/catalog/chicken1000-tab@2x.webp 2x" width="168" height="206">
+                <source type="image/webp" srcset="img/catalog/chicken1000-mob@1x.webp 1x,
+                img/catalog/chicken1000-mob@2x.webp 2x" width="84" height="100> -->
+                <source media="(min-width: 1440px)"
+                  srcset="img/catalog/chicken1000-desk@1x.png 1x, img/catalog/chicken1000-desk@2x.png 2x" width="172"
+                  height="196">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/chicken1000-tab@1x.png 1x, img/catalog/chicken1000-tab@2x.png 2x" width="168"
+                  height="206">
+                <img class="product-card__image product-card__image--big" src="img/catalog/chicken1000-mob@1x.png"
+                  srcset="img/catalog/chicken1000-mob@2x.png 2x" width="84" height="100"
+                  alt="Корм «CAT ENERGY PRO» со вкусом курицы 1000 грамм.">
+              </picture>
             </a>
             <div class="product-card__wrapper-content">
               <a class="product-card__link" href="#">
@@ -95,8 +120,18 @@
           </li>
           <li class="catalog__item product-card">
             <a class="product-card__img-link" href="#">
-              <img class="product-card__image" src="#" width="#" height="172"
-                alt="Зеленая банка корма «CAT ENERGY PRO» со вкусом рыбы 500 грамм.">
+              <picture>
+                <!-- <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish500-tab@1x.webp 1x,
+                img/catalog/fish500-tab@2x.webp 2x" width="163" height="174">
+                <source type="image/webp" srcset="img/catalog/fish500-mob@1x.webp 1x,
+                img/catalog/fish500-mob@2x.webp 2x" width="68" height="78"> -->
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/fish500-tab@1x.png 1x, img/catalog/fish500-tab@2x.png 2x" width="163"
+                  height="174">
+                <img class="product-card__image product-card__image--small" src="img/catalog/fish500-mob@1x.png"
+                  srcset="img/catalog/fish500-mob@2x.png 2x" width="68" height="78"
+                  alt="Корм «CAT ENERGY PRO» со вкусом рыбы 500 грамм.">
+              </picture>
             </a>
             <div class="product-card__wrapper-content">
               <a class="product-card__link" href="#">
@@ -121,8 +156,23 @@
           </li>
           <li class="catalog__item product-card product-card--size-xl">
             <a class="product-card__img-link" href="#">
-              <img class="product-card__image" src="#" width="#" height="200"
-                alt="Зеленая банка корма «CAT ENERGY PRO» со вкусом рыбы 1000 грамм.">
+              <picture>
+                <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/fish1000-desk@1x.webp 1x,
+                img/catalog/fish1000-desk@2x.webp 2x" width="172" height="196">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/fish1000-tab@1x.webp 1x,
+                img/catalog/fish1000-tab@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" srcset="img/catalog/fish1000-mob@1x.webp 1x,
+                img/catalog/fish1000-mob@2x.webp 2x" width="84" height="100"> -->
+                <source media="(min-width: 1440px)"
+                  srcset="img/catalog/fish1000-desk@1x.png 1x, img/catalog/fish1000-desk@2x.png 2x" width="172"
+                  height="196">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/fish1000-tab@1x.png 1x, img/catalog/fish1000-tab@2x.png 2x" width="168"
+                  height="200">
+                <img class="product-card__image product-card__image--big" src="img/catalog/fish1000-mob@1x.png"
+                  srcset="img/catalog/fish1000-mob@2x.png 2x" width="84" height="100"
+                  alt="Корм «CAT ENERGY PRO» со вкусом рыбы 1000 грамм.">
+              </picture>
             </a>
             <div class="product-card__wrapper-content">
               <a class="product-card__link" href="#">
@@ -147,8 +197,18 @@
           </li>
           <li class="catalog__item product-card">
             <a class="product-card__img-link" href="#">
-              <img class="product-card__image" src="#" width="#" height="172"
-                alt="Голубая банка корма «CAT ENERGY PRO» со вкусом гречки 500 грамм.">
+              <picture>
+                <!-- <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat500-tab@1x.webp 1x,
+                img/catalog/buckwheat500-tab@2x.webp 2x" width="161" height="171">
+                <source type="image/webp" srcset="img/catalog/buckwheat500-mob@1x.webp 1x,
+                img/catalog/buckwheat500-mob@2x.webp 2x" width="68" height="78"> -->
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/buckwheat500-tab@1x.png 1x, img/catalog/buckwheat500-tab@2x.png 2x" width="161"
+                  height="171">
+                <img class="product-card__image product-card__image--small" src="img/catalog/buckwheat500-mob@1x.png"
+                  srcset="img/catalog/buckwheat500-mob@2x.png 2x" width="68" height="78"
+                  alt="Корм «CAT ENERGY PRO» со вкусом гречки 500 грамм.">
+              </picture>
             </a>
             <div class="product-card__wrapper-content">
               <a class="product-card__link" href="#">
@@ -173,8 +233,23 @@
           </li>
           <li class="catalog__item product-card product-card--size-xl">
             <a class="product-card__img-link" href="#">
-              <img class="product-card__image" src="#" width="#" height="200"
-                alt="Голубая банка корма «CAT ENERGY PRO» со вкусом гречки 1000 грамм.">
+              <picture>
+                <!-- <source type="image/webp" media="(min-width: 1440px)" srcset="img/catalog/buckwheat1000-desk@1x.webp 1x,
+                img/catalog/buckwheat1000-desk@2x.webp 2x" width="172" height="196">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/buckwheat1000-tab@1x.webp 1x,
+                img/catalog/buckwheat1000-tab@2x.webp 2x" width="168" height="200">
+                <source type="image/webp" srcset="img/catalog/buckwheat1000-mob@1x.webp 1x,
+                img/catalog/buckwheat1000-mob@2x.webp 2x" width="84" height="100"> -->
+                <source media="(min-width: 1440px)"
+                  srcset="img/catalog/buckwheat1000-desk@1x.png 1x, img/catalog/buckwheat1000-deskt@2x.png 2x"
+                  width="172" height="196">
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/buckwheat1000-tab@1x.png 1x, img/catalog/buckwheat1000-tab@2x.png 2x" width="168"
+                  height="200">
+                <img class="product-card__image product-card__image--big" src="img/catalog/buckwheat1000-mob@1x.png"
+                  srcset="img/catalog/buckwheat1000-mob@2x.png 2x" width="84" height="100"
+                  alt="Корм «CAT ENERGY PRO» со вкусом гречки 1000 грамм.">
+              </picture>
             </a>
             <div class="product-card__wrapper-content">
               <a class="product-card__link" href="#">
@@ -199,8 +274,17 @@
           </li>
           <li class="catalog__item product-card">
             <a class="product-card__img-link" href="#">
-              <img class="product-card__image" src="#" width="#" height="172"
-                alt="Фиолетовая банка корма «CAT ENERGY PRO» со вкусом риса 500 грамм.">
+              <picture>
+                <!-- <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/rice500-tab@1x.webp 1x,
+                img/catalog/rice500-tab@2x.webp 2x" width="163" height="174">
+                <source type="image/webp" srcset="img/catalog/rice500-mob@1x.webp 1x,
+                img/catalog/rice500-mob@2x.webp 2x" width="72" height="84"> -->
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/rice500-tab@1x.png 1x, img/catalog/rice500-tab@2x.png 2x" width="163" height="174">
+                <img class="product-card__image product-card__image--small" src="img/catalog/rice500-mob@1x.png"
+                  srcset="img/catalog/rice500-mob@2x.png 2x" width="72" height="84"
+                  alt="Корм «CAT ENERGY PRO» со вкусом риса 500 грамм.">
+              </picture>
             </a>
             <div class="product-card__wrapper-content">
               <a class="product-card__link" href="#">
@@ -318,7 +402,7 @@
       </div>
       <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/">
+        <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
           <img src="img/htmlacademy-trial.png">
         </a>
       </div>
