--- a/source/form.html
+++ b/source/form.html
@@ -181,7 +181,7 @@
       </div>
       <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/">
+        <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
           <img src="img/htmlacademy-trial.png">
         </a>
       </div>
