--- a/source/index.html
+++ b/source/index.html
@@ -60,7 +60,7 @@
           <li class="products__item products__item--pro">
             <h3 class="products__title">Набор массы</h3>
             <p class="products__subtitle">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
-              поможет вашему коту нарастить необходимые мышцы!.</p>
+              поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="products__link" href="catalog/pro.html">Каталог pro</a>
           </li>
         </ul>
@@ -159,7 +159,7 @@
       </div>
       <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/">
+        <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
           <img src="img/htmlacademy-trial.png">
         </a>
       </div>
