добавляет логотип в подвале сайта

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -379,7 +379,7 @@
     <div class="footer__wrapper content-container">
       <div class="footer__item">
         <a class="footer__logo logo" href=" index.html">
-          <img class="footer__logo-type logo__type" src="img/logo-trial.png" width="#" height="#"
+          <img class="footer__logo-type logo__type" src="img/logo/logo-type.svg" width="128" height="24"
             alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
         </a>
       </div>
