--- a/source/index.html
+++ b/source/index.html
@@ -40,10 +40,21 @@
   <main class="page__main index-main">
     <section class="index-main__promo promo">
       <div class="promo__container content-container">
-        <h1 class="promo__title title title--light">Функциональное<br> питание для котов</h1>
-        <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <img class="promo__img promo-img" src="img/index-can-desk.png"
-          alt="Оранжевая банка питания для котов «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
+        <h1 class="promo__title title">Функциональное<br> питание для котов</h1>
+        <div class="promo__slogan-container">
+          <p class="promo__slogan">Занялся собой? Займись котом!</p>
+        </div>
+        <div class="promo__img-wrapper">
+          <picture>
+            <source media="(min-width: 1440px)"
+              srcset="img/content/promo-desk@1x.png 1x, img/content/promo-desk@2x.png 2x" width="552" height="499">
+            <source media="(min-width: 768px)" srcset="img/content/promo-tab@1x.png 1x, img/content/promo-tab@2x.png 2x"
+              width="708" height="609">
+            <img class="promo__img" src="img/content/promo-mob@1x.png" srcset="img/content/promo-mob@2x.png 2x"
+              width="280" height="270"
+              alt="Оранжевая банка питания для котов «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
+          </picture>
+        </div>
         <a class="promo__button button" href="form.html">Подобрать программу</a>
       </div>
     </section>
@@ -160,9 +171,7 @@
       </div>
       <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
-          <img src="img/htmlacademy-trial.png">
-        </a>
+        <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy"></a>
       </div>
     </div>
   </footer>
