--- a/source/form.html
+++ b/source/form.html
@@ -19,19 +19,19 @@
             alt="Логотип интернет-магазина фитнес еды для котиков «Кэт энерджи».">
         </picture>
       </a>
-      <nav class="header__nav main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
+      <nav class="header__nav main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button" aria-label="Кнопка меню.">
+          <span class="main-nav__toggle-icon"></span>
         </button>
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="index.html">Главная</a>
+            <a class="main-nav__link site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-nav__link site-list__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--active" href="form.html">Подбор программы</a>
+            <a class="main-nav__link site-list__link site-list__link--active" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -188,6 +188,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
