--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body class="page__body body">
-  <header class="header">
-    <div class="header__wrapper content-container">
+  <header class="body__header header">
+    <div class="header__wrapper header__wrapper--index content-container">
       <a class="header__logo logo" href="index.html">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo/logo-desk.svg" width="202" height="59">
@@ -19,19 +19,19 @@
             alt="Логотип интернет-магазина фитнес еды для котиков «Кэт энерджи».">
         </picture>
       </a>
-      <nav class="header__nav main-nav">
-        <button class="main-nav__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
+      <nav class="header__nav main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button" aria-label="Кнопка меню.">
+          <span class="main-nav__toggle-icon"></span>
         </button>
         <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a class="site-list__link site-list__link--active" href="index.html">Главная</a>
+          <li class="site-list__item site-list__item--index">
+            <a class="main-nav__link site-list__link site-list__link--active" href="index.html">Главная</a>
           </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+          <li class="site-list__item site-list__item--index">
+            <a class="main-nav__link site-list__link" href="catalog.html">Каталог продукции</a>
           </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Подбор программы</a>
+          <li class="site-list__item site-list__item--index">
+            <a class="main-nav__link site-list__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -175,6 +175,7 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
