дорабатывает шапку под пиксель перфект

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -363,7 +363,7 @@
       </div>
     </section>
     <section class="contacts contacts--dark-theme">
-      <div class="contacts__wrapper content-container">
+      <div class="contacts__wrapper content-container content-container--default">
         <h2 class="visually-hidden">Наши контакты</h2>
         <div class="contacts__content">
           <h3 class="contacts__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
