--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,7 @@
       </div>
     </section>
     <section class="contacts">
-      <div class="contacts__wrapper content-container">
+      <div class="contacts__wrapper content-container content-container--default">
         <h2 class="visually-hidden">Наши контакты</h2>
         <div class="contacts__content">
           <h3 class="contacts__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
