вносит правки согласно критериям

--- a/source/form.html
+++ b/source/form.html
@@ -197,7 +197,7 @@
       <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
         <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
-          <img src="img/htmlacademy-trial.png">
+          <span class="copyright__icon"></span>
         </a>
       </div>
     </div>
