--- a/source/index.html
+++ b/source/index.html
@@ -176,7 +176,9 @@
       </div>
       <div class="footer__item copyright">
         <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy"></a>
+        <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
+          <span class="copyright__icon"></span>
+        </a>
       </div>
     </div>
   </footer>
