--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
 <body class="page__body body">
   <header class="body__header header">
     <div class="header__wrapper header__wrapper--index content-container">
-      <a class="header__logo logo" href="index.html">
+      <a class="header__logo logo" href="#">
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo/logo-desk.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo/logo-tab.svg" width="174" height="52">
@@ -52,6 +52,12 @@
         </div>
         <div class="promo__img-wrapper">
           <picture>
+            <!-- <source type="image/webp" media="(min-width: 1440px)"
+              srcset="img/content/promo-desk@1x.webp 1x, img/content/promo-desk@2x.webp 2x" width="552" height="499">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/content/promo-tab@1x.webp 1x, img/content/promo-tab@2x.webp 2x" width="708" height="609">
+            <source type="image/webp" srcset="img/content/promo-mob@1x.webp 1x, img/content/promo-mob@2x.webp 2x" width="280"
+              height="270"> -->
             <source media="(min-width: 1440px)"
               srcset="img/content/promo-desk@1x.png 1x, img/content/promo-desk@2x.png 2x" width="552" height="499">
             <source media="(min-width: 768px)" srcset="img/content/promo-tab@1x.png 1x, img/content/promo-tab@2x.png 2x"
@@ -131,7 +137,34 @@
           </dl>
         </div>
         <div class="demo__slider cat-slider">
-          <img class="cat-slider__img" src="#" alt="">
+          <picture>
+            <!-- <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/content/fat-cat-tab@1x.webp 1x, img/content/fat-cat-tab@2x.webp 2x" width="560" height="512">
+            <source type="image/webp" srcset="img/content/fat-cat-mob@1x.webp 1x, img/content/fat-cat-mob@2x.webp 2x"
+              width="280" height="256"> -->
+            <source media="(min-width: 768px)"
+              srcset="img/content/fat-cat-tab@1x.png 1x, img/content/fat-cat-tab@2x.png 2x" width="560"
+              height="512">
+            <img class="cat-slider__img cat-slider__img--pro" src="img/content/fat-cat-mob@1x.png"
+              srcset="img/content/fat-cat-mob@2x.png 2x" width="280" height="256" alt="Кот до похудение">
+          </picture>
+          <picture>
+            <!-- <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/content/skinny-cat-tab@1x.webp 1x, img/content/skinny-cat-tab@2x.webp 2x" width="560"
+              height="512">
+            <source type="image/webp"
+              srcset="img/content/skinny-cat-mob@1x.webp 1x, img/content/skinny-cat-mob@2x.webp 2x" width="280"
+              height="256"> -->
+            <source media="(min-width: 768px)"
+              srcset="img/content/skinny-cat-tab@1x.png 1x, img/content/skinny-cat-tab@2x.png 2x" width="560"
+              height="512">
+            <img class="cat-slider__img cat-slider__img--slim" src="img/content/skinny-cat-mob@1x.png"
+              srcset="img/content/skinny-cat-mob@2x.png 2x" width="280" height="256" alt="Кот после похудение">
+          </picture>
+          <div class="cat-slider__button-wrapper">
+            <button class="cat-slider__button">
+              <span class="visually-hidden">Кнопка переключения слайдера</span>
+            </button>
         </div>
       </div>
     </section>
