подгоняет главную сраницу под PP

--- a/source/index.html
+++ b/source/index.html
@@ -94,7 +94,7 @@
       <div class="content-container">
         <h2 class="feature__title">Как это работает</h2>
         <ul class="feature__list">
-          <li class="feature__item">
+          <li class="feature__item feature__item--first">
             <div class="feature__icon feature__icon--nutrients"></div>
             <p class="feature__text">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
