--- a/source/catalog.html
+++ b/source/catalog.html
@@ -412,9 +412,8 @@
         </ul>
       </div>
       <div class="footer__item copyright">
-        <a class="copyright__text" href="https://htmlacademy.ru/">HTML Academy</a>
-        <a class="copyright__logo" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
-          <span class="copyright__icon"></span>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
+          <span class="copyright__text">HTML Academy</span>
         </a>
       </div>
     </div>
