Правки по PP и критериям

--- a/source/form.html
+++ b/source/form.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +12,6 @@
   <!--    -    -->
   <link href="css/style.min.css" rel="stylesheet">
 </head>
-
 <body class="page__body body">
   <header class="header">
     <div class="header__wrapper content-container">
@@ -102,8 +100,8 @@
               <li class="form-contacts__item">
                 <Label class="form-contacts__label" for="email_form">
                   <span class="form-contacts__label-name">E-mail:<sup>*</sup></span>
-                  <input class="form-contacts__input" type="email" name="email"
-                    id="email_form" placeholder="kuklachev@gmail.com" required>
+                  <input class="form-contacts__input" type="email" name="email" id="email_form"
+                    placeholder="kuklachev@gmail.com" required>
                   <span class="form-contacts__icon form-contacts__icon--email"></span>
                 </Label>
               </li>
@@ -173,8 +171,9 @@
       <div class="contacts__map location-map">
         <h3 class="visually-hidden">Схема проезда</h3>
         <iframe class="location-map__interactive location-map__interactive--nojs"
-          src="https://yandex.ru/map-widget/v1/?um=constructor%3A4dd6ebc4af9a1fbcf1dca1089653f59613f06d1615269b3e5cd36eb40f1c1a35&amp;source=constructor"
-          height="362" title="Карта проезда"></iframe>
+          src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&amp;mode=search&amp;ol=geo&amp;ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&amp;z=16.59"
+          height="362" style="position: relative;">
+        </iframe>
       </div>
     </section>
   </main>
@@ -186,7 +185,7 @@
             alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
         </a>
       </div>
-      <div class="footer__item social">
+      <div class="footer__item footer__item--social social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
@@ -214,5 +213,4 @@
   </footer>
   <script src="js/script.js"></script>
 </body>
-
 </html>
