--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +12,6 @@
   <!--    -    -->
   <link href="css/style.min.css" rel="stylesheet">
 </head>
-
 <body class="page__body body">
   <header class="header">
     <div class="header__wrapper content-container">
@@ -49,7 +47,7 @@
         <h1 class="catalog__title title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item product-card">
-            <a class="product-card__img-link" href="#">
+            <a class="product-card__img-link product-card__img-link--chicken" href="#">
               <picture>
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/content/chicken500-tab@1x.webp 1x,
                 img/content/chicken500-tab@2x.webp 2x" width="161" height="172">
@@ -58,7 +56,7 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/chicken500-tab@1x.png 1x, img/content/chicken500-tab@2x.png 2x" width="161"
                   height="172">
-                <img class="product-card__image product-card__image--small" src="img/content/chicken500-mob@1x.png"
+                <img class="product-card__image product-card__image--middle" src="img/content/chicken500-mob@1x.png"
                   srcset="img/content/chicken500-mob@2x.png 2x" width="68" height="86"
                   alt="Корм «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
               </picture>
@@ -289,7 +287,7 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/rice500-tab@1x.png 1x, img/content/rice500-tab@2x.png 2x" width="163"
                   height="174">
-                <img class="product-card__image product-card__image--small" src="img/content/rice500-mob@1x.png"
+                <img class="product-card__image product-card__image--middle" src="img/content/rice500-mob@1x.png"
                   srcset="img/content/rice500-mob@2x.png 2x" width="72" height="84"
                   alt="Корм «CAT ENERGY PRO» со вкусом риса 500 грамм.">
               </picture>
@@ -378,9 +376,10 @@
       </div>
       <div class="contacts__map location-map">
         <h3 class="visually-hidden">Схема проезда</h3>
-        <iframe class="location-map__interactive location-map__interactive--nojs"
-          src="https://yandex.ru/map-widget/v1/?um=constructor%3A4dd6ebc4af9a1fbcf1dca1089653f59613f06d1615269b3e5cd36eb40f1c1a35&amp;source=constructor"
-          height="362" title="Карта проезда"></iframe>
+        <iframe class="location-map__interactive"
+          src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&amp;mode=search&amp;ol=geo&amp;ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&amp;z=16.59"
+          height="362" style="position: relative;">
+        </iframe>
       </div>
     </section>
   </main>
@@ -392,7 +391,7 @@
             alt="Текстовый логотип интернет-магазина «Кэт энерджи»">
         </a>
       </div>
-      <div class="footer__item social">
+      <div class="footer__item footer__item--social social">
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
@@ -420,5 +419,4 @@
   </footer>
   <script src="js/script.js"></script>
 </body>
-
 </html>
