--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,6 +11,9 @@
   <link rel="manifest" href="manifest.webmanifest">
   <!--    -    -->
   <link href="css/style.min.css" rel="stylesheet">
+  <link rel="preload" href="./fonts/lato/latoregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
 <body class="page__body body">
   <header class="header">
@@ -19,7 +22,7 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo/logo-desk.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo/logo-tab.svg" width="174" height="52">
-          <img class="logo__img" src="img/logo/logo-mob.svg" width="191" height="38"
+          <img class="logo__img" loading="lazy" src="img/logo/logo-mob.svg" width="191" height="38"
             alt="Логотип интернет-магазина фитнес еды для котиков «Кэт энерджи».">
         </picture>
       </a>
@@ -56,7 +59,7 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/chicken500-tab@1x.png 1x, img/content/chicken500-tab@2x.png 2x" width="161"
                   height="172">
-                <img class="product-card__image product-card__image--middle" src="img/content/chicken500-mob@1x.png"
+                <img class="product-card__image product-card__image--middle" loading="lazy" src="img/content/chicken500-mob@1x.png"
                   srcset="img/content/chicken500-mob@2x.png 2x" width="68" height="86"
                   alt="Корм «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
               </picture>
@@ -98,7 +101,7 @@
                   srcset="img/content/chicken1000-tab@1x.png 1x, img/content/chicken1000-tab@2x.png 2x" width="168"
                   height="200">
                 <img class="product-card__image product-card__image--big" src="img/content/chicken1000-mob@1x.png"
-                  srcset="img/content/chicken1000-mob@2x.png 2x" width="84" height="100"
+                  srcset="img/content/chicken1000-mob@2x.png 2x" loading="lazy" width="84" height="100"
                   alt="Корм «CAT ENERGY PRO» со вкусом курицы 1000 грамм.">
               </picture>
             </a>
@@ -133,7 +136,7 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/fish500-tab@1x.png 1x, img/content/fish500-tab@2x.png 2x" width="163"
                   height="174">
-                <img class="product-card__image product-card__image--small" src="img/content/fish500-mob@1x.png"
+                <img class="product-card__image product-card__image--small" loading="lazy" src="img/content/fish500-mob@1x.png"
                   srcset="img/content/fish500-mob@2x.png 2x" width="68" height="78"
                   alt="Корм «CAT ENERGY PRO» со вкусом рыбы 500 грамм.">
               </picture>
@@ -174,7 +177,7 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/fish1000-tab@1x.png 1x, img/content/fish1000-tab@2x.png 2x" width="168"
                   height="200">
-                <img class="product-card__image product-card__image--big" src="img/content/fish1000-mob@1x.png"
+                <img class="product-card__image product-card__image--big" loading="lazy" src="img/content/fish1000-mob@1x.png"
                   srcset="img/content/fish1000-mob@2x.png 2x" width="84" height="100"
                   alt="Корм «CAT ENERGY PRO» со вкусом рыбы 1000 грамм.">
               </picture>
@@ -210,7 +213,7 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/buckwheat500-tab@1x.png 1x, img/content/buckwheat500-tab@2x.png 2x" width="161"
                   height="171">
-                <img class="product-card__image product-card__image--small" src="img/content/buckwheat500-mob@1x.png"
+                <img class="product-card__image product-card__image--small" loading="lazy" src="img/content/buckwheat500-mob@1x.png"
                   srcset="img/content/buckwheat500-mob@2x.png 2x" width="68" height="78"
                   alt="Корм «CAT ENERGY PRO» со вкусом гречки 500 грамм.">
               </picture>
@@ -251,7 +254,7 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/buckwheat1000-tab@1x.png 1x, img/content/buckwheat1000-tab@2x.png 2x" width="168"
                   height="200">
-                <img class="product-card__image product-card__image--big" src="img/content/buckwheat1000-mob@1x.png"
+                <img class="product-card__image product-card__image--big" loading="lazy" src="img/content/buckwheat1000-mob@1x.png"
                   srcset="img/content/buckwheat1000-mob@2x.png 2x" width="84" height="100"
                   alt="Корм «CAT ENERGY PRO» со вкусом гречки 1000 грамм.">
               </picture>
@@ -287,7 +290,7 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/rice500-tab@1x.png 1x, img/content/rice500-tab@2x.png 2x" width="163"
                   height="174">
-                <img class="product-card__image product-card__image--middle" src="img/content/rice500-mob@1x.png"
+                <img class="product-card__image product-card__image--middle" loading="lazy" src="img/content/rice500-mob@1x.png"
                   srcset="img/content/rice500-mob@2x.png 2x" width="72" height="84"
                   alt="Корм «CAT ENERGY PRO» со вкусом риса 500 грамм.">
               </picture>
@@ -376,7 +379,7 @@
       </div>
       <div class="contacts__map location-map">
         <h3 class="visually-hidden">Схема проезда</h3>
-        <iframe class="location-map__interactive"
+        <iframe class="location-map__interactive" loading="lazy"
           src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&amp;mode=search&amp;ol=geo&amp;ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&amp;z=16.59"
           height="362" style="position: relative;">
         </iframe>
