--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,9 @@
   <link rel="manifest" href="manifest.webmanifest">
   <!--    -    -->
   <link href="css/style.min.css" rel="stylesheet">
+  <link rel="preload" href="./fonts/lato/latoregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+	<link rel="preload" href="./fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
 <body class="page__body body">
   <header class="body__header header">
@@ -19,7 +22,7 @@
         <picture>
           <source media="(min-width: 1440px)" srcset="img/logo/logo-desk.svg" width="202" height="59">
           <source media="(min-width: 768px)" srcset="img/logo/logo-tab.svg" width="174" height="52">
-          <img class="logo__img" src="img/logo/logo-mob.svg" width="191" height="38"
+          <img class="logo__img" loading="lazy" src="img/logo/logo-mob.svg" width="191" height="38"
             alt="Логотип интернет-магазина фитнес еды для котиков «Кэт энерджи».">
         </picture>
       </a>
@@ -60,7 +63,7 @@
               srcset="img/content/promo-desk@1x.png 1x, img/content/promo-desk@2x.png 2x" width="552" height="499">
             <source media="(min-width: 768px)" srcset="img/content/promo-tab@1x.png 1x, img/content/promo-tab@2x.png 2x"
               width="708" height="609">
-            <img class="promo__img" src="img/content/promo-mob@1x.png" srcset="img/content/promo-mob@2x.png 2x"
+            <img class="promo__img" loading="lazy" src="img/content/promo-mob@1x.png" srcset="img/content/promo-mob@2x.png 2x"
               width="280" height="270"
               alt="Оранжевая банка питания для котов «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
           </picture>
@@ -143,7 +146,7 @@
               width="280" height="256">
             <source media="(min-width: 768px)"
               srcset="img/content/fat-cat-tab@1x.png 1x, img/content/fat-cat-tab@2x.png 2x" width="560" height="512">
-            <img class="cat-slider__img cat-slider__img--pro" src="img/content/fat-cat-mob@1x.png"
+            <img class="cat-slider__img cat-slider__img--pro" loading="lazy" src="img/content/fat-cat-mob@1x.png"
               srcset="img/content/fat-cat-mob@2x.png 2x" width="280" height="256" alt="Кот до похудение">
           </picture>
           <picture>
@@ -156,7 +159,7 @@
             <source media="(min-width: 768px)"
               srcset="img/content/skinny-cat-tab@1x.png 1x, img/content/skinny-cat-tab@2x.png 2x" width="560"
               height="512">
-            <img class="cat-slider__img cat-slider__img--slim" src="img/content/skinny-cat-mob@1x.png"
+            <img class="cat-slider__img cat-slider__img--slim" loading="lazy" src="img/content/skinny-cat-mob@1x.png"
               srcset="img/content/skinny-cat-mob@2x.png 2x" width="280" height="256" alt="Кот после похудение">
           </picture>
           <div class="cat-slider__button-wrapper">
@@ -177,7 +180,7 @@
       </div>
       <div class="contacts__map location-map">
         <h3 class="visually-hidden">Схема проезда</h3>
-        <iframe class="location-map__interactive"
+        <iframe class="location-map__interactive" loading="lazy"
           src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&amp;mode=search&amp;ol=geo&amp;ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&amp;z=16.59"
           height="362" style="position: relative;">
         </iframe>
