улучшает скорость загрузки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,10 +12,11 @@
   <link rel="manifest" href="manifest.webmanifest">
   <!--    -    -->
   <link href="css/style.min.css" rel="stylesheet">
-  <link rel="preload" href="./fonts/lato/latoregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-	<link rel="preload" href="./fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-	<link rel="preload" href="./fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/lato/latoregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
+
 <body class="page__body body">
   <header class="header">
     <div class="header__wrapper content-container">
@@ -59,9 +61,9 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/chicken500-tab@1x.png 1x, img/content/chicken500-tab@2x.png 2x" width="161"
                   height="172">
-                <img class="product-card__image product-card__image--middle" loading="lazy" src="img/content/chicken500-mob@1x.png"
-                  srcset="img/content/chicken500-mob@2x.png 2x" width="68" height="86"
-                  alt="Корм «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
+                <img class="product-card__image product-card__image--middle" loading="lazy"
+                  src="img/content/chicken500-mob@1x.png" srcset="img/content/chicken500-mob@2x.png 2x" width="68"
+                  height="86" alt="Корм «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
               </picture>
             </a>
             <div class="product-card__wrapper-content">
@@ -136,8 +138,8 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/fish500-tab@1x.png 1x, img/content/fish500-tab@2x.png 2x" width="163"
                   height="174">
-                <img class="product-card__image product-card__image--small" loading="lazy" src="img/content/fish500-mob@1x.png"
-                  srcset="img/content/fish500-mob@2x.png 2x" width="68" height="78"
+                <img class="product-card__image product-card__image--small" loading="lazy"
+                  src="img/content/fish500-mob@1x.png" srcset="img/content/fish500-mob@2x.png 2x" width="68" height="78"
                   alt="Корм «CAT ENERGY PRO» со вкусом рыбы 500 грамм.">
               </picture>
             </a>
@@ -177,9 +179,9 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/fish1000-tab@1x.png 1x, img/content/fish1000-tab@2x.png 2x" width="168"
                   height="200">
-                <img class="product-card__image product-card__image--big" loading="lazy" src="img/content/fish1000-mob@1x.png"
-                  srcset="img/content/fish1000-mob@2x.png 2x" width="84" height="100"
-                  alt="Корм «CAT ENERGY PRO» со вкусом рыбы 1000 грамм.">
+                <img class="product-card__image product-card__image--big" loading="lazy"
+                  src="img/content/fish1000-mob@1x.png" srcset="img/content/fish1000-mob@2x.png 2x" width="84"
+                  height="100" alt="Корм «CAT ENERGY PRO» со вкусом рыбы 1000 грамм.">
               </picture>
             </a>
             <div class="product-card__wrapper-content">
@@ -213,9 +215,9 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/buckwheat500-tab@1x.png 1x, img/content/buckwheat500-tab@2x.png 2x" width="161"
                   height="171">
-                <img class="product-card__image product-card__image--small" loading="lazy" src="img/content/buckwheat500-mob@1x.png"
-                  srcset="img/content/buckwheat500-mob@2x.png 2x" width="68" height="78"
-                  alt="Корм «CAT ENERGY PRO» со вкусом гречки 500 грамм.">
+                <img class="product-card__image product-card__image--small" loading="lazy"
+                  src="img/content/buckwheat500-mob@1x.png" srcset="img/content/buckwheat500-mob@2x.png 2x" width="68"
+                  height="78" alt="Корм «CAT ENERGY PRO» со вкусом гречки 500 грамм.">
               </picture>
             </a>
             <div class="product-card__wrapper-content">
@@ -254,9 +256,9 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/buckwheat1000-tab@1x.png 1x, img/content/buckwheat1000-tab@2x.png 2x" width="168"
                   height="200">
-                <img class="product-card__image product-card__image--big" loading="lazy" src="img/content/buckwheat1000-mob@1x.png"
-                  srcset="img/content/buckwheat1000-mob@2x.png 2x" width="84" height="100"
-                  alt="Корм «CAT ENERGY PRO» со вкусом гречки 1000 грамм.">
+                <img class="product-card__image product-card__image--big" loading="lazy"
+                  src="img/content/buckwheat1000-mob@1x.png" srcset="img/content/buckwheat1000-mob@2x.png 2x" width="84"
+                  height="100" alt="Корм «CAT ENERGY PRO» со вкусом гречки 1000 грамм.">
               </picture>
             </a>
             <div class="product-card__wrapper-content">
@@ -290,8 +292,8 @@
                 <source media="(min-width: 768px)"
                   srcset="img/content/rice500-tab@1x.png 1x, img/content/rice500-tab@2x.png 2x" width="163"
                   height="174">
-                <img class="product-card__image product-card__image--middle" loading="lazy" src="img/content/rice500-mob@1x.png"
-                  srcset="img/content/rice500-mob@2x.png 2x" width="72" height="84"
+                <img class="product-card__image product-card__image--middle" loading="lazy"
+                  src="img/content/rice500-mob@1x.png" srcset="img/content/rice500-mob@2x.png 2x" width="72" height="84"
                   alt="Корм «CAT ENERGY PRO» со вкусом риса 500 грамм.">
               </picture>
             </a>
@@ -422,4 +424,5 @@
   </footer>
   <script src="js/script.js"></script>
 </body>
+
 </html>
