--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,10 +12,11 @@
   <link rel="manifest" href="manifest.webmanifest">
   <!--    -    -->
   <link href="css/style.min.css" rel="stylesheet">
-  <link rel="preload" href="./fonts/lato/latoregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-	<link rel="preload" href="./fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-	<link rel="preload" href="./fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/lato/latoregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
+
 <body class="page__body body">
   <header class="header">
     <div class="header__wrapper content-container">
@@ -216,4 +218,5 @@
   </footer>
   <script src="js/script.js"></script>
 </body>
+
 </html>
