--- a/source/index.html
+++ b/source/index.html
@@ -11,9 +11,9 @@
   <link rel="manifest" href="manifest.webmanifest">
   <!--    -    -->
   <link href="css/style.min.css" rel="stylesheet">
-  <link rel="preload" href="./fonts/lato/latoregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-	<link rel="preload" href="./fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-	<link rel="preload" href="./fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/lato/latoregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldmedium.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/oswaldregular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
 </head>
 <body class="page__body body">
   <header class="body__header header">
@@ -63,8 +63,8 @@
               srcset="img/content/promo-desk@1x.png 1x, img/content/promo-desk@2x.png 2x" width="552" height="499">
             <source media="(min-width: 768px)" srcset="img/content/promo-tab@1x.png 1x, img/content/promo-tab@2x.png 2x"
               width="708" height="609">
-            <img class="promo__img" loading="lazy" src="img/content/promo-mob@1x.png" srcset="img/content/promo-mob@2x.png 2x"
-              width="280" height="270"
+            <img class="promo__img" loading="lazy" src="img/content/promo-mob@1x.png"
+              srcset="img/content/promo-mob@2x.png 2x" width="280" height="270"
               alt="Оранжевая банка питания для котов «CAT ENERGY PRO» со вкусом курицы 500 грамм.">
           </picture>
         </div>
@@ -223,4 +223,5 @@
   </footer>
   <script src="js/script.js"></script>
 </body>
+
 </html>
